# meowsic

./: .gitignore  README.md  TODO.md  hero.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/: FUNDING.yml
.github/workflows/: build.yml
backend/: .gitignore  Cargo.toml  tauri.conf.json
backend/capabilities/: default.json
backend/icons/: icon.icns
backend/src/: art.rs  commands.rs  db.rs  main.rs  player.rs  players.rs  track.rs  tracks.rs  utils.rs
backend/src/genshin/: api.rs  character.rs  handlers.rs  material.rs  mod.rs
backend/src/sql/: init.sql  uninit.sql
screenshots/: index.md
scripts/: build.ps1
src/: albums.tsx  artists.tsx  lyrics.tsx  main.tsx  players.tsx  queue.tsx  rules.tsx  settings.tsx  styles.css  utils.ts
src/components/: home.tsx  index.tsx  lists.tsx  queue.tsx  widgets.tsx  window.tsx  windows.tsx
src/emotions/: components.tsx  index.ts
src/genshin/: components.tsx  index.ts
src/player/: components.tsx  index.ts  types.ts  utils.ts
src/playlists/: components.tsx  index.ts
src/scrub-player/: components.tsx  index.ts  types.ts
src/tracks/: components.tsx  index.ts
src/tracks/components/: details.tsx  index.tsx
