[package]
name = "mirage"
version = "1.0.0"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
tauri = { version = "2.5.1", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-opener = "2.2.7"
tauri-plugin-http = "2.4.4"
tauri-plugin-store = "2.2.0"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
anyhow = "1.0.98"
scraper = "0.23.1"
itertools = "0.14.0"
parking_lot = "0.12.3"
