[package]
name = "meowsic"
version = "1.0.0"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
tauri = { version = "2.6.0", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-http = "2.4.4"
tauri-plugin-store = "2.2.0"
tauri-plugin-opener = "2.2.7"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
anyhow = "1.0.98"
parking_lot = "0.12.4"
rodio = { version = "0.20.1", default-features = false, features = [
    "symphonia-all",
] }
symphonia = { version = "0.5", features = ["all"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
walkdir = "2.5.0"
tauri-plugin-dialog = "2"
