[package]
name = "meowsic"
version = "1.4.1"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
tauri = { version = "2.6.2", features = ["protocol-asset"] }
tauri-plugin-http = { version = "2.5.0", features = ["json"] }
tauri-plugin-store = "2.3.0"
tauri-plugin-opener = "2.4.0"
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
anyhow = "1.0.98"
parking_lot = "0.12.4"
rodio = { version = "0.20.1", default-features = false, features = [
    "symphonia-all",
] }
symphonia = { version = "0.5.4", features = ["all"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
walkdir = "2.5.0"
tauri-plugin-dialog = "2.3.0"
serde_with = "3.14.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2.3.0"
tauri-plugin-single-instance = "2.3.0"
